vou tentar aplicar a proporção 16/9

--- a/frontend/src/Componentes/ControladorSwiperDireita/style.module.css
+++ b/frontend/src/Componentes/ControladorSwiperDireita/style.module.css
@@ -5,31 +5,11 @@
     overflow: hidden;
     padding: 2vh 1vw;
     flex: 1;
-}
-
-#conteudo_swiper_direita :global(.slick-list) {
-    overflow: visible;
-}
-
-#conteudo_swiper_direita :global(.slick-slide) {
-    display: flex;
+    gap: 1vh;
 }
 
 #titulos_paginas_swiper_direita {
 
-}
-
-.item_slider {
-    transform: scale(0.5);
-    transition: transform 300ms;
-    opacity: 0.5;
-    text-align: center;
-    transition: transform 300ms, opacity 300ms, flex-basis 300ms;
-}
-
-.item_slider_selecionado {
-    transform: scale(1.1);
-    opacity: 1;
 }
 
 .swiper_direita {
@@ -67,37 +47,6 @@
 
 .swiper_direita.swiper_direita_fechado {
     transform: translateX(100%);
-}
-
-.arrow {
-    position: absolute;
-    cursor: pointer;
-    z-index: 10;
-    top: 35%;
-}
-
-.arrow svg {
-    transition: color 300ms;
-}
-
-.arrow svg:hover {
-    color: #68EDFF
-}
-
-.arrow_next {
-    right: 0;
-}
-
-.arrow_prev {
-    left: 0;
-}
-
-.icone_config_pagina{
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: 15%;
-    transform: translate(90%, -40%);
 }
 
 .configuracoes_pagina {
