--- a/frontend/src/Componentes/ModalDialog/style.module.css
+++ b/frontend/src/Componentes/ModalDialog/style.module.css
@@ -28,7 +28,7 @@
 	/* width: 90vw;
 	max-width: 450px; */
 	max-height: 85vh;
-	padding: 25px;
+	padding: 1.5vh;
 	animation: contentShow 150ms cubic-bezier(0.16, 1, 0.3, 1);
 
     font-family: 'Crimson Pro', serif;
@@ -42,7 +42,7 @@
 .dialog_titulo {
 	margin: 0;
 	font-weight: 500;
-	color: '#211F26';
+	color: #211F26;
 	font-size: 2rem;
     line-height: 1;
 }
