--- a/frontend/src/Assets/estilo_global.css
+++ b/frontend/src/Assets/estilo_global.css
@@ -1,3 +1,8 @@
+* {
+    margin: 0;
+    box-sizing: border-box;
+}
+
 body {
     background: linear-gradient(to bottom, #0b1623 0%, #1e3a5f 50%, #0b1623 100%);
     margin: 0;
@@ -14,30 +19,6 @@ body::before {
     right: 0;
     height: 100%;
     /* background: radial-gradient(circle, #292b2457 0%, transparent 63%); */
-}
-
-.noMargin {
-    margin: 0;
-}
-
-.carousel-content {
-    display: flex;
-    flex-direction: column;
-    width: 55%;
-}
-
-.slick-list {
-    padding: 0;
-}
-
-.slick-slide > div {
-    display: flex;
-    margin: auto;
-}
-
-.slick-slider {
-    width: 100%;
-    height: auto;
 }
 
 ::-webkit-scrollbar {
