--- a/frontend/src/Recursos/EstilizacaoCompartilhada/detalhes_popover.module.css
+++ b/frontend/src/Recursos/EstilizacaoCompartilhada/detalhes_popover.module.css
@@ -90,6 +90,10 @@
     margin-top: .5vh;
 }
 
+.recipiente_conteudo_execucao_modal {
+    flex: 1;
+}
+
 .opcao_acao {
     display: flex;
     flex-direction: column;
