--- a/frontend/src/Assets/estilo_global.css
+++ b/frontend/src/Assets/estilo_global.css
@@ -21,6 +21,10 @@ body::before {
     /* background: radial-gradient(circle, #292b2457 0%, transparent 63%); */
 }
 
+input {
+    color: black;
+}
+
 ::-webkit-scrollbar {
     width: 10px;
 }
