--- a/frontend/src/Componentes/ModalDialog/style.module.css
+++ b/frontend/src/Componentes/ModalDialog/style.module.css
@@ -34,31 +34,22 @@
     font-family: 'Crimson Pro', serif;
     font-variant: small-caps;
 	gap: 1vh;
+
+    aspect-ratio: 1 / 1.2;
+    padding: 1%;
+    min-width: 25%;
+
 	z-index: 400;
 }
 
 .dialog_conteudo:focus { outline: none; }
 
 .dialog_titulo {
-	margin: 0;
+    margin: 0 auto;
 	font-weight: 500;
 	color: #211F26;
 	font-size: 2rem;
     line-height: 1;
-}
-
-.dialog_botao_fechar {
-	font-family: inherit;
-	border-radius: 100%;
-	height: 25px;
-	width: 25px;
-	display: inline-flex;
-	align-items: center;
-	justify-content: center;
-	color: '#6550B9';
-	position: absolute;
-	top: 10px;
-	right: 10px;
 }
 
 .dialog_botao_fechar:hover { background-color: '#EBE4FF'; }
@@ -122,6 +113,19 @@
 	flex-direction: column;
 	gap: .4vh;
 	overflow: auto;
+	flex: 1 0 0;
+}
+
+.dialog_rodape {
+	display: flex;
+	flex-direction: row;
+	flex: 0 0 0;
+	justify-content: center;
+	gap: 5%;
+}
+
+.dialog_rodape button {
+	padding: 2%;
 }
 
 /* .Fieldset {
