--- a/frontend/src/Paginas/Ficha/style.module.css
+++ b/frontend/src/Paginas/Ficha/style.module.css
@@ -95,7 +95,27 @@
     flex-direction: column;
     width: 22%;
     align-items: center;
+    padding: .6%;
+    gap: .4vh;
+}
+
+.recipiente_infomacoes_personagem {
+    display: flex;
+    flex-direction: column;
+}
+
+.recipiente_imagem_personagem {
+    display: flex;
+    flex-direction: row;
+    flex: 1;
+    width: 100%;
     justify-content: center;
+}
+
+#imagem_personagem {
+    height: 100%;
+    aspect-ratio: 1 / 1;
+    background-color: plum;
 }
 
 .fatia_parte_baixo_atalhos {
