vou começar a fazer algumas modificações para a janela de execução de ação para tentar chegar em um ponto comum entre ações genericas e ações especificas

--- a/frontend/src/Recursos/EstilizacaoCompartilhada/detalhes_popover.module.css
+++ b/frontend/src/Recursos/EstilizacaoCompartilhada/detalhes_popover.module.css
@@ -114,6 +114,18 @@
     align-self: center;
 }
 
+.recipiente_icones {
+    display: flex;
+    flex-direction: row;
+    height: 1.4em;
+    justify-content: center;
+    gap: 2%;
+}
+
+.recipiente_icones svg {
+    height: 100%;
+}
+
 .bloco_texto_espaçado {
     display: flex;
     flex-direction: column;
