--- a/frontend/src/Componentes/ModalDialog/style.module.css
+++ b/frontend/src/Componentes/ModalDialog/style.module.css
@@ -22,11 +22,8 @@
 	position: fixed;
 	top: 50%;
 	left: 50%;
+	width: 34vw;
 	transform: translate(-50%, -50%);
-	width: auto;
-    max-width: 90vw;
-	/* width: 90vw;
-	max-width: 450px; */
 	max-height: 85vh;
 	padding: 1.5vh;
 	animation: contentShow 150ms cubic-bezier(0.16, 1, 0.3, 1);
@@ -37,7 +34,6 @@
 
     aspect-ratio: 1 / 1.2;
     padding: 1%;
-    min-width: 25%;
 
 	z-index: 400;
 }
