--- a/frontend/src/Paginas/Loja/style.module.css
+++ b/frontend/src/Paginas/Loja/style.module.css
@@ -30,7 +30,7 @@
     margin: auto;
 }
 
-.botao_categoria_item{
+.botao_categoria_item {
     flex: 1 1 calc(40%);
 }
 
@@ -59,6 +59,29 @@
     width: fit-content;
     aspect-ratio: 1 / 0.5;
 }
+
+.recipiente_area_botoes_equipamentos {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    gap: 5%;
+    width: 100%;
+    justify-content: center;
+}
+
+.botao_equipamento {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    flex: 1 1 calc(20%);
+    height: 9vh;
+    gap: 1vh;
+}
+
+.botao_equipamento svg {
+    flex: 1;
+}
+
 
 /*  */
 
