--- a/src/app/styles.module.css
+++ b/src/app/styles.module.css
@@ -18,3 +18,19 @@
 :global(section h1) {
     font-size: 2em;
 }
+
+#corpo {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 2vh;
+    font-family: 'Barlow', sans-serif;
+    margin-bottom: 5vh;
+}
+
+#corpo p {
+    font-weight: bold;
+    font-size: 1.4rem;
+    line-height: 1.3rem;
+    margin: 0;
+}
