Wiki estavel, fazendo animação de transição de página

--- a/src/app/styles.module.css
+++ b/src/app/styles.module.css
@@ -6,7 +6,9 @@
     width: 100%;
     height: 100%;
     gap: 4vh;
-    overflow: hidden;
+    overflow-y: auto;
+    overflow-x: hidden;
+    scrollbar-width: none;
 
     color: white;
     font-family: 'Crimson Pro', serif;
@@ -25,6 +27,7 @@
     flex-direction: column;
     align-items: center;
     gap: 2vh;
+    flex: 1;
     font-family: 'Barlow', sans-serif;
 }
 
