--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,12 +12,12 @@
 
 html, body {
   width: 100%;
+  height: 100%;
   scrollbar-width: none;
 }
 
 body {
   position: static;
-  overflow: auto;
   background-color: #0E0B18;
 }
 
@@ -29,6 +29,11 @@ a {
   color: inherit;
   text-decoration: none;
   width: 100%;
+  cursor: pointer;
+}
+
+a:hover {
+  color: gold;
 }
 
 svg {
