--- a/src/componentes/ElementosVisuais/PaginaAterrissagem/Rodape/styles.module.css
+++ b/src/componentes/ElementosVisuais/PaginaAterrissagem/Rodape/styles.module.css
@@ -1,6 +1,7 @@
 #rodape {
     display: flex;
     flex-direction: row;
+    position: relative;
     flex: 0 0 0;
     width: 90%;
     align-items: center;
