--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,6 +14,7 @@ html, body {
   width: 100%;
   height: 100%;
   scrollbar-width: none;
+  scrollbar-gutter: stable;
 }
 
 body {
@@ -30,15 +31,20 @@ a {
   text-decoration: none;
   width: 100%;
   cursor: pointer;
+  text-decoration: underline;
 }
 
 a:hover {
-  color: gold;
+  color: #C5AA18;
 }
 
 svg {
   width: 100%;
   height: 100%;
+}
+
+.negrito {
+  font-weight: bolder;
 }
 
 /* 
