--- a/src/componentes/ElementosDeJogo/ModalPrimeiroAcesso/styles.module.css
+++ b/src/componentes/ElementosDeJogo/ModalPrimeiroAcesso/styles.module.css
@@ -1,7 +1,7 @@
 .modal_primeiro_acesso {
     height: 70vh;
     font-size: 1.3rem;
-    font-family: var(--fonte-inter) !important;
+    font-family: var(--fonte-junge) !important;
 }
 
 .conteudo_modal_primeiro_acesso_confirmacao {
