--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,9 @@
 :root {
-  --fonte-cinzel-decorative: 'Cinzel Decorative', serif;
   --fonte-cinzel: 'Cinzel', serif;
+  --fonte-cinzel-decorative: 'Cinzel Decorative', serif;
+  --fonte-junge: 'Junge', serif;
+
+  --zindex-final-swiperEsquerda: 999;
 }
 
 * {
@@ -38,7 +41,7 @@ a:hover {
   color: #C5AA18;
 }
 
-svg {
+svg, .container_svg {
   width: 100%;
   height: 100%;
 }
