--- a/src/componentes/ElementosVisuais/PaginaAterrissagem/SecoesPaginaAterrissagem/SecaoPrincipal/styles.module.css
+++ b/src/componentes/ElementosVisuais/PaginaAterrissagem/SecoesPaginaAterrissagem/SecaoPrincipal/styles.module.css
@@ -9,13 +9,8 @@
     user-select: none;
 }
 
-#recipiente_secao_principal > div {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-}
-
 #recipiente_secao_principal #recipiente_imagem_fundo_secao_principal {
+    position: absolute;
     width: 90%;
     height: 90%;
     bottom: 3%;
@@ -23,11 +18,20 @@
     mask-image: radial-gradient(circle at center, rgba(255, 255, 255, 1) 30%, rgba(255, 255, 255, 0) 84%);
 }
 
-.svg_moldura_principal {
-    height: auto;
+#recipiente_moldura {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+}
+
+#recipiente_moldura_relative {
+    position: relative;
 }
 
 #conteudo_secao_principal {
+    position: absolute;
+    width: 100%;
+    height: 100%;
     margin-top: 19%;
     margin-left: 14%;
 }
