--- a/src/componentes/ElementosVisuais/BotaoAcessar/styles.module.css
+++ b/src/componentes/ElementosVisuais/BotaoAcessar/styles.module.css
@@ -1,35 +1,12 @@
-
-.recipiente_icones_acesso {
-    position: relative;
-    height: 65%;
-    aspect-ratio: 1;
-}
-
-.recipiente_icones_acesso img {
-    width: auto !important;
-}
-
-#icones_esquerda {
-
-}
-
-#recipiente_icones_acesso_botao {
-    height: 61%;
-    left: -7%;
-    z-index: 2;
-}
-
-#botao_acessar {
-    display: flex;
-    position: relative;
-    z-index: 3;
+#recipiente_svg_botao_acesso {
+    width: 100%;
     height: 100%;
 }
 
-#recipiente_icones_lateral_direita {
-    right: -10%;
-}
-
-#icones_direita {
-    transform: scaleX(-1);
+#recipiente_botao_acesso, #recipiente_botao_acesso_efeitos {
+    position: absolute;
+    height: 100%;
+    width: 60%;
+    top: 2%;
+    left: 20%;
 }
