--- a/src/componentes/ElementosVisuais/PaginaAterrissagem/Rodape/styles.module.css
+++ b/src/componentes/ElementosVisuais/PaginaAterrissagem/Rodape/styles.module.css
@@ -21,6 +21,7 @@
     bottom: 6%;
     width: 22%;
     justify-content: space-between;
+    align-items: center;
 }
 
 #recipiente_redes_sociais a {
